--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>En este apartado se presentara los primeros pasos para la definición del proyecto software en el cual
                     requiere que realicemos lo escencial el analisis del negocio, requisitos del producto a crear
                 </p>
-                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/En5JUMYckQRNojIPKhZW8toByf3gbjtO1kgcecTRYNnHwg?e=28DUrA" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a documentación</a>
+                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/En5JUMYckQRNojIPKhZW8toByf3gbjtO1kgcecTRYNnHwg?e=28DUrA" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" target="_blank">Ir a documentación</a>
               </div>
             </div>
             <div class="col-md-6">
@@ -62,7 +62,7 @@
                 <p>Este apartado se trata de como planificamos los artefactos del proyecto de software y donde estan los planes que
                     tendran el proyecto
                 </p>
-                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/EgP1YjxYkstBlW5U1WAA4XQBOZFiglkiNmNYGeE4HPZ4pw?e=9GqeiR" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a documentación</a>
+                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/EgP1YjxYkstBlW5U1WAA4XQBOZFiglkiNmNYGeE4HPZ4pw?e=9GqeiR" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" target="_blank">Ir a documentación</a>
               </div>
             </div>
           </div>
@@ -74,14 +74,14 @@
                 <p>Esta fase es donde se ejecutara todos los artefactos del proyecto, se monitorea si los artefactos esta ejecutando de manera correcta sin afectar al proyecto y por ultimo
                     se realiza los controles respectivos del comportamiento del proyecto.
                 </p>
-                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/EnDy4z_68qtHpmvXbGndKtAB8CVu8t41AY7kzv7bFglHgA?e=FB6o9V" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a documentación</a>
+                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/EnDy4z_68qtHpmvXbGndKtAB8CVu8t41AY7kzv7bFglHgA?e=FB6o9V" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" target="_blank">Ir a documentación</a>
               </div>
             </div>
             <div class="col-md-6">
               <div class="h-100 p-5 bg-light border rounded-3">
                 <h2>Cierre del Proyecto</h2>
                 <p>Este apartado es el final del proyecto en donde se da cierre a todo los artefactos y donde se entrega el producto final.</p>
-                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/El3ThLvURoNGmslOCaTh5S8BRYk6uy1ExecQNvjruZl36w?e=4FhuCT" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Ir a documentación</a>
+                <a href="https://liveespochedu-my.sharepoint.com/:f:/g/personal/edgar_amanta_espoch_edu_ec/El3ThLvURoNGmslOCaTh5S8BRYk6uy1ExecQNvjruZl36w?e=4FhuCT" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" target="_blank">Ir a documentación</a>
 
               </div>
             </div> 
